// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DidEndpointsForm should match the snapshot 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Service Endpoints
    </h1>
    <p
      class="subline"
    >
      Add and remove service endpoints
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with on-chain DID and lots of coins
        </span>
      </div>
    </section>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4oeJ76hdj84xnwCNqijUHUCTmfwXgSZ4vmxLEiTEYgQdBCcZ"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <ul
      class="list"
    >
      <li
        aria-expanded="false"
        class="add"
      >
        <a
          class="expand"
          href="/identity/FOO/did/endpoints/add"
        >
          + Add service endpoint
        </a>
      </li>
      <li
        aria-expanded="false"
        class="endpoint"
      >
        <a
          class="expand"
          href="/identity/FOO/did/endpoints/123456"
        >
          <section
            class="collapsedCard"
          >
            <h4
              class="collapsedUrl"
            >
              https://sporran.org/
            </h4>
            <p
              class="collapsedType"
            >
              Some Type
            </p>
          </section>
        </a>
      </li>
      <li
        aria-expanded="true"
        class="endpoint"
      >
        <section
          class="buttons"
        >
          <button
            class="remove"
            type="button"
          />
        </section>
        <dl>
          <dt
            class="name"
          >
            URL
          </dt>
          <dd
            class="value"
          >
            https://kilt.io/
          </dd>
          <dt
            class="name"
          >
            Type
          </dt>
          <dd
            class="value"
          >
            Another Type
          </dd>
          <dt
            class="name"
          >
            Service ID
          </dt>
          <dd
            class="value"
          >
            654321
          </dd>
        </dl>
      </li>
    </ul>
    <a
      aria-label="Back"
      class="linkBack"
      href="/identity/FOO/did"
      title="Back"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;

exports[`DidEndpointsForm should match the snapshot when no service endpoints 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Service Endpoints
    </h1>
    <p
      class="subline"
    >
      Add and remove service endpoints
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with on-chain DID and lots of coins
        </span>
      </div>
    </section>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4oeJ76hdj84xnwCNqijUHUCTmfwXgSZ4vmxLEiTEYgQdBCcZ"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <ul
      class="list"
    >
      <li
        aria-expanded="true"
        class="add"
      >
        <h2
          class="cardHeading"
        >
          + Add service endpoint
        </h2>
        <form>
          <div
            class="labelLine"
          >
            <label
              class="label"
            >
              URL
              <input
                class="input"
                name="url"
                required=""
                type="url"
              />
            </label>
          </div>
          <div
            class="labelLine"
          >
            <label
              class="label"
            >
              Type
              <input
                class="input"
                name="type"
                required=""
              />
            </label>
          </div>
          <div
            class="labelLine"
          >
            <label
              class="label"
            >
              Service ID
              <input
                class="input"
                name="id"
                required=""
                value="123456"
              />
            </label>
          </div>
          <p
            class="buttonsLine"
          >
            <button
              class="submit"
              type="submit"
            >
              Next Step
            </button>
          </p>
        </form>
      </li>
    </ul>
    <a
      aria-label="Back"
      class="linkBack"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/did"
      title="Back"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </section>
</div>
`;
